# openpi-control

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: yam_teaching_handle.md
native/pi_control/: .clang-tidy  CMakeLists.txt
native/pi_control/include/: pi_algo.hpp  pi_algo_pino.hpp  pi_command_line_args.hpp  pi_control.hpp  pi_current_estimation.hpp  pi_device.hpp  pi_device_arm.hpp  pi_device_arm_arx.hpp  pi_device_config.hpp  pi_device_effector.hpp  pi_device_effector_arx.hpp  pi_driver.hpp  pi_driver_arx.hpp  pi_driver_arx_encoder.hpp  pi_driver_can.hpp  pi_exception.hpp  pi_filter.hpp  pi_force_feedback.hpp  pi_hold_checker.hpp  pi_info.hpp  pi_joint.hpp  pi_profile.hpp  pi_safe_mode.hpp  pi_servo.hpp  pi_servo_can_encoder.hpp  pi_servo_dm.hpp  pi_servo_dm_status.hpp  pi_stall_detect.hpp  pi_topic.hpp  pi_topic_zmq.hpp
native/pi_control/include/can/: math_ops.h
native/pi_control/src/: pi_algo.cpp  pi_algo_pino.cpp  pi_command_line_args.cpp  pi_control_node.cpp  pi_current_estimation.cpp  pi_device.cpp  pi_device_arm.cpp  pi_device_arm_arx.cpp  pi_device_config.cpp  pi_device_effector.cpp  pi_device_effector_arx.cpp  pi_driver.cpp  pi_driver_arx.cpp  pi_driver_arx_encoder.cpp  pi_driver_can.cpp  pi_filter.cpp  pi_force_feedback.cpp  pi_hold_checker.cpp  pi_info.cpp  pi_joint.cpp  pi_safe_mode.cpp  pi_servo.cpp  pi_servo_can_encoder.cpp  pi_servo_dm.cpp  pi_servo_dm_status.cpp  pi_stall_detect.cpp  pi_topic.cpp  pi_topic_zmq.cpp
native/pi_control/tests/: CMakeLists.txt  test_current_estimation.cpp  test_device_config.cpp  test_driver_arx.cpp  test_driver_base.cpp  test_driver_can.cpp  test_filter.cpp  test_hold_checker.cpp  test_servo_dm_status.cpp  test_stall_detect.cpp  test_topic_zmq.cpp
native/pi_control/tests/fuzz/: fuzz_servo_status_parsers.cpp
scripts/: build_deps.sh  install_build_deps_ubuntu.sh
src/openpi_control/: __init__.py  config.py  exceptions.py  log_paths.py  native.py  protocol.py  runlog.py  types.py  urdf_inertial.py
src/openpi_control/arm_commands/: movements_test.csv
src/openpi_control/models/arms/ARX_ENC/: ARX_ENC.json  ARX_ENC_01.json
src/openpi_control/models/arms/ARX_L5/: ARX_L5.json  ARX_L5_01.json
src/openpi_control/models/arms/ARX_X5/: ARX_X5.json  ARX_X5_01.json
src/openpi_control/models/arms/Yam/: Yam.json  Yam.urdf  Yam_01.json
src/openpi_control/models/effectors/E_ARX/: E_ARX.json  E_ARX_01.json
src/openpi_control/models/effectors/E_ARX_ENC/: E_ARX_ENC.json  E_ARX_ENC_01.json  E_ARX_ENC_mass.json
src/openpi_control/models/effectors/E_Yam/: E_Yam.json  E_Yam_01.json
src/openpi_control/models/effectors/E_Yam_Handle/: E_Yam_Handle.json  E_Yam_Handle_01.json
src/openpi_control/models/effectors/E_Yam_Handle_compat/: E_Yam_Handle_compat.json  E_Yam_Handle_compat_01.json  E_Yam_Handle_compat_mass.json
src/openpi_control/servos/: __init__.py  buses.py  dm_can.py  dxl_serial.py  encos_can.py
tests/: fake_native_node.py  test_config.py  test_log_paths.py  test_native.py  test_native_backend.py  test_protocol.py  test_protocol_properties.py  test_runlog.py  test_servos.py  test_types.py  test_urdf_inertial.py
tests/sil/: fake_dm_servo.py  test_native_sil.py  tsan.supp
